# igvc-2022-software

./: .gitignore  .gitmodules  README.md  ros-requirements.txt  rosdep_install.sh  rospack_install.sh  rospack_setup.sh  rospip_install.sh
Examples/Canable/: canable.md
Examples/ROS/: README.md  ros-can.md  ros-gps.md  ros-tf2.md  ros-xbox.md
Examples/ZED/: ros-zed.md  zed.md
Examples/pika/: consumer.py
Examples/pika-direct-exchange/: publisher.py  subscriber.py
Examples/pika-named-queue/: README.md  consumer.py  producer.py
Examples/pika-pub-sub/: README.md  publisher.py  subscriber.py
Examples/rabbitmq/: README.md
Launch/: controller.launch  nav-test.launch  paradigm.launch
Node/: .gitignore  CMakeLists.txt  Node.ioc  README.md  build.sh  create_new_c_file.sh
Node/Core/Inc/: can_handler.h  can_message_defs.h  main.h  motor_control.h  state.h  utilities.h
Node/Core/Src/: can_handler.c  main.c  motor_control.c  state.c
ROS/example_pkg/: CMakeLists.txt  README.md  package.xml
ROS/example_pkg/launch/: gps_listener.launch
ROS/example_pkg/scripts/: can_logger.py  can_sender.py  gps_listener.py  talker.py  view_transform.py
ROS/open_base/launch/: velocity_controller.launch  velocity_controller_test.launch
ROS/para-control/: CMakeLists.txt  package.xml
ROS/para-control/scripts/: joy_to_motor_command.py
ROS/para-nav/: CMakeLists.txt  package.xml
ROS/para-nav/scripts/: bev_publisher.py
ROS/para_ai/: CMakeLists.txt  package.xml  setup.py
ROS/para_ai/launch/: pipeline.launch
ROS/para_ai/scripts/: seg_to_bev.py  zed_to_seg.py
ROS/para_control/: CMakeLists.txt  package.xml  setup.py
ROS/para_control/launch/: controller_probe.launch  ps4_motor_controller.launch  ps4_state_controller.launch  xbox_controller_teleop.launch
ROS/para_control/scripts/: controller_listener.py  heartbeat.py  joy_to_motor_command.py  open_base_teleop.py  open_base_teleop_controller.py  open_base_teleop_keyboard.py  ps4_motor_controller.py  ps4_state_controller.py  xbox_listener.py
ROS/para_control/scripts/para_control/: __init__.py  frog_can_commands.py  open_base_utils.py  ps4_utils.py  xbox_utils.py
ROS/para_nav/: CMakeLists.txt  package.xml
ROS/para_nav/cfg/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ROS/para_nav/launch/: bev_generator.launch  gps.launch  nav-offline.launch  nav-test.launch  rgbd_to_pcl.launch
ROS/para_nav/scripts/: bev_publisher.py  bev_to_grid.py  bev_to_point_cloud.py
ROS/para_nav/src/: bev_to_point_cloud.cpp  pcl_proc.cpp
fsm/: README.md  fsm.c
simulator/: .gitignore
simulator/Assets/: Drive.cs  ServerComs.cs  Terrain.asset
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Materials/: Main PolyPack.mat  Main.mat
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Models/: Ambulance-Truck.fbx  EL-Truck.fbx  IceCream-Truck.fbx  MuscleCarV1.fbx  MuscleCarV2.fbx  MuscleCarV3.fbx  MuscleCarV4.fbx  Post-Truck.fbx  SwiftoV1.fbx  SwiftoV2.fbx
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Models/Version 1.1/: Ambulance-Truck.fbx  EL-Truck.fbx  IceCream-Truck.fbx  MinivanV1.fbx  MinivanV2.fbx  MuscleCarV1.fbx  MuscleCarV2.fbx  MuscleCarV3.fbx  MuscleCarV4.fbx  PickupV1.fbx  PickupV2.fbx  Post-Truck.fbx  SuvV1.fbx  SwiftoV1.fbx  SwiftoV2.fbx
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Models/Version 1.2/: Ambulance-Truck.fbx  EL-Truck.fbx  IceCream-Truck.fbx  MinivanV1.fbx  MinivanV2.fbx  MuscleCarV1.fbx  MuscleCarV2.fbx  MuscleCarV3.fbx  MuscleCarV4.fbx  PickupV1.fbx  PickupV2.fbx  Post-Truck.fbx  SuvV1.fbx  SwiftoV1.fbx  SwiftoV2.fbx
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Prefabs/: Ambulance-Truck.prefab  EL-Truck.prefab  IceCream-Truck.prefab  MuscleCarV1.prefab  MuscleCarV2.prefab  MuscleCarV3.prefab  MuscleCarV4.prefab  Post-Truck.prefab  SwiftoV1.prefab  SwiftoV2.prefab
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Prefabs/Version 1.1/: Ambulance-Truck.prefab  EL-Truck.prefab  IceCream-Truck.prefab  MinivanV1.prefab  MinivanV2.prefab  MuscleCarV1.prefab  MuscleCarV2.prefab  MuscleCarV3.prefab  MuscleCarV4.prefab  PickupV1.prefab  PickupV2.prefab  Post-Truck.prefab  SuvV1.prefab  SwiftoV1.prefab  SwiftoV2.prefab
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Prefabs/Version 1.2/: Ambulance-Truck.prefab  EL-Truck.prefab  IceCream-Truck.prefab  MinivanV1.prefab  MinivanV2.prefab  MuscleCarV1.prefab  MuscleCarV2.prefab  MuscleCarV3.prefab  MuscleCarV4.prefab  PickupV1.prefab  PickupV2.prefab  Post-Truck.prefab  SuvV1.prefab  SwiftoV1.prefab  SwiftoV2.prefab
simulator/Assets/Alstra Infinite/Vehicles LowPoly/Scene/: Demo.unity
simulator/Assets/Networking/: CommunicationUtils.cs  WsClient.cs
simulator/Assets/Networking/Models/: TelemetryModel.cs
simulator/Assets/Scenes/: EasyDrive.unity
simulator/Assets/Scenes/SampleScene/: LightingData.asset  Lightmap-0_comp_light.exr
simulator/GSD/TH/: SampleScene-RAS1-Road1-TH.gsd
simulator/ProjectSettings/: ProjectSettings.asset
simulator/python/: websocket_sample.py
